--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome",
+            "name": "Launch Chrome1",
             "url": "http://localhost:4200",
             "sourceMaps": true,
             "webRoot": "${workspaceFolder}"
