--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng s -o --port 4200",
     "build": "ng build",
     "build:prod": "ng build --prod",
     "test": "ng test",
